Implementado a authenticação através de JWT com o método Bearer Token.

--- a/PedidosWeb-API/appsettings.json
+++ b/PedidosWeb-API/appsettings.json
@@ -7,5 +7,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {"PedidosWebDb": "Data Source=.\\SQLEXPRESS;Database=PedidosWebDB;Integrated Security=true;"}
+  "ConnectionStrings": { "PedidosWebDb": "Data Source=.\\SQLEXPRESS;Database=PedidosWebDB;Integrated Security=true;" },
+  "Jwt": { "Key": "Processo$BLive$2021" },
+  "TokenConfiguration": {
+    "Issuer": "Blive_Issuer",
+    "Audience": "Blive_Audience",
+    "ExpirationHours": 2
+  }
+
 }
