Alterado o Repository de produtos para implementar a inclusão das categorias na consulta.

--- a/PedidosWeb-API/appsettings.json
+++ b/PedidosWeb-API/appsettings.json
@@ -7,12 +7,13 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "PedidosWebDb": "Data Source=.\\SQLEXPRESS;Database=PedidosWebDB;Integrated Security=true;" },
+  "ConnectionStrings": { "PedidosWebDb": "Data Source=.\\SQLEXPRESS;Database=PedidosWebDB_new;Integrated Security=true;" },
   "Jwt": { "Key": "Processo$BLive$2021" },
   "TokenConfiguration": {
     "Issuer": "Blive_Issuer",
     "Audience": "Blive_Audience",
     "ExpirationHours": 2
-  }
+  },
+  "WebApp": { "Url": "http://localhost:4200/" }
 
 }
